--- a/qichiyu.ini
+++ b/qichiyu.ini
@@ -81,7 +81,7 @@ custom_proxy_group=⭐ 日本故转`fallback`!!GROUPID=!0!!(日本|川日|东京
 custom_proxy_group=🍃 香港均衡`load-balance`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🎥 奈飞节点`select`(?=.*(香港|专线|高级))^((?!(0.2|美国|韩国|特殊|日本|台湾|标准|新加坡)).)*$
+custom_proxy_group=🎥 奈飞节点`select`(?=.*(香港|专线|高级))^((?!(0.2|美国|韩国|特殊|日本|台湾|标准|购物|狮城)).)*$
 
 ;启用自定义规则集
 
