--- a/qichiyu.ini
+++ b/qichiyu.ini
@@ -23,6 +23,7 @@ ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=📲 Telegram,https://raw.githubusercontent.com/Z-Siqi/Clash-for-Windows_Rule/refs/heads/main/Rule/Instagram
 ruleset=📲 Telegram,https://raw.githubusercontent.com/Z-Siqi/Clash-for-Windows_Rule/refs/heads/main/Rule/Twitter
 ruleset=📲 Telegram,https://raw.githubusercontent.com/Z-Siqi/Clash-for-Windows_Rule/refs/heads/main/Rule/WhatsApp
+ruleset=📲 Telegram,https://raw.githubusercontent.com/Z-Siqi/Clash-for-Windows_Rule/refs/heads/main/Rule/Discord
 ruleset=♻️ Speedtest,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list
 ruleset=📹 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Twitch/Twitch.list
