--- a/qichiyu.ini
+++ b/qichiyu.ini
@@ -28,6 +28,7 @@ ruleset=🪟 Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/
 ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Instagram/Instagram.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/Jeremy23443/clash-rules/refs/heads/main/insta.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Twitter/Twitter.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Line/Line.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Discord/Discord.list
